2nd commit (delete class activity login/regist & edit xml files manifest,login/regist)

--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -8,7 +8,7 @@
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:padding="18dp"
-    tools:context=".ActivityRegister">
+    tools:context=".LoginActivity">
 
     <ImageView
         android:id="@+id/iv_title"
