--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -8,7 +8,7 @@
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:padding="18dp"
-    tools:context=".ActivityRegister">
+    tools:context=".RegisterActivity">
 
     <ImageView
         android:id="@+id/iv_title"
