4th commit (editing xml files login/regist & class login/regist; google acc sign in/up)

--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -14,7 +14,7 @@
         android:id="@+id/iv_title"
         android:layout_width="wrap_content"
         android:layout_height="100dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="10dp"
         android:src="@drawable/title" />
 
     <TextView
@@ -31,7 +31,7 @@
         android:id="@+id/tv_signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
         android:fontFamily="casual"
         android:text="Sign Up"
         android:textColor="@color/text2"
@@ -111,7 +111,7 @@
         android:text="Sign Up"
         android:textColor="@color/text1"
         android:textStyle="bold"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="15dp"/>
 
     <TextView
         android:id="@+id/tv_loginpage"
@@ -125,12 +125,40 @@
         android:layout_marginTop="10dp"
         android:gravity="center_horizontal"/>
 
+    <TextView
+        android:id="@+id/tv_signupmethod"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Sign Un dengan:"
+        android:textColor="@color/text2"
+        android:textColorHint="@color/text2"
+        android:textStyle="bold"
+        android:fontFamily="casual"
+        android:layout_marginTop="35px"
+        android:gravity="center_horizontal"
+        android:textSize="20dp"/>
+
+    <Button
+        android:id="@+id/btngoogleregist"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="@string/google_sign_in"
+        android:background="@drawable/button_shape"
+        android:textColor="@color/text1"
+        android:textStyle="bold"
+        android:fontFamily="casual"
+        android:layout_marginTop="5dp"
+        android:drawableLeft="@drawable/google"
+        android:paddingLeft="70dp"
+        android:paddingRight="70dp"/>
+
     <ProgressBar
         android:id="@+id/progressbarRegist"
         style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="10dp"
         android:visibility="invisible"/>
 
 </LinearLayout>
