--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -14,7 +14,7 @@
         android:id="@+id/iv_title"
         android:layout_width="wrap_content"
         android:layout_height="100dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="30dp"
         android:src="@drawable/title" />
 
     <TextView
@@ -31,7 +31,7 @@
         android:id="@+id/tv_signin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="30dp"
         android:fontFamily="casual"
         android:text="Sign In"
         android:textColor="@color/text2"
@@ -111,12 +111,40 @@
         android:layout_marginTop="25px"
         android:gravity="center_horizontal" />
 
+    <TextView
+        android:id="@+id/tv_loginmethod"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Sign In dengan:"
+        android:textColor="@color/text2"
+        android:textColorHint="@color/text2"
+        android:textStyle="bold"
+        android:fontFamily="casual"
+        android:layout_marginTop="35px"
+        android:gravity="center_horizontal"
+        android:textSize="20dp"/>
+
+    <Button
+        android:id="@+id/btngooglelogin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="@string/google_sign_in"
+        android:background="@drawable/button_shape"
+        android:textColor="@color/text1"
+        android:textStyle="bold"
+        android:fontFamily="casual"
+        android:layout_marginTop="5dp"
+        android:drawableLeft="@drawable/google"
+        android:paddingLeft="70dp"
+        android:paddingRight="70dp"/>
+
     <ProgressBar
         android:id="@+id/progressbarLogin"
         style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="30dp"
         android:visibility="invisible"/>
 
 </LinearLayout>
