--- a/app/src/main/res/layout/siswa_ud.xml
+++ b/app/src/main/res/layout/siswa_ud.xml
@@ -17,10 +17,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/nama"
-            android:textColorHint="@color/text2"
+            android:textColorHint="@color/item"
             android:fontFamily="casual"
             android:textStyle="bold"
-            android:textColor="@color/text2"
+            android:textColor="@color/item"
             android:textSize="20dp"
             android:background="@drawable/menu_shape"
             android:paddingLeft="20dp"
@@ -32,10 +32,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/nis"
-            android:textColorHint="@color/text2"
+            android:textColorHint="@color/item"
             android:fontFamily="casual"
             android:textStyle="bold"
-            android:textColor="@color/text2"
+            android:textColor="@color/item"
             android:textSize="20dp"
             android:background="@drawable/menu_shape"
             android:paddingLeft="20dp"
@@ -48,10 +48,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/ttl"
-            android:textColorHint="@color/text2"
+            android:textColorHint="@color/item"
             android:fontFamily="casual"
             android:textStyle="bold"
-            android:textColor="@color/text2"
+            android:textColor="@color/item"
             android:textSize="20dp"
             android:background="@drawable/menu_shape"
             android:paddingLeft="20dp"
@@ -63,10 +63,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/jk"
-            android:textColorHint="@color/text2"
+            android:textColorHint="@color/item"
             android:fontFamily="casual"
             android:textStyle="bold"
-            android:textColor="@color/text2"
+            android:textColor="@color/item"
             android:textSize="20dp"
             android:background="@drawable/menu_shape"
             android:paddingLeft="20dp"
@@ -78,10 +78,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/nohp"
-            android:textColorHint="@color/text2"
+            android:textColorHint="@color/item"
             android:fontFamily="casual"
             android:textStyle="bold"
-            android:textColor="@color/text2"
+            android:textColor="@color/item"
             android:textSize="20dp"
             android:background="@drawable/menu_shape"
             android:paddingLeft="20dp"
@@ -94,10 +94,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/notlportu"
-            android:textColorHint="@color/text2"
+            android:textColorHint="@color/item"
             android:fontFamily="casual"
             android:textStyle="bold"
-            android:textColor="@color/text2"
+            android:textColor="@color/item"
             android:textSize="20dp"
             android:background="@drawable/menu_shape"
             android:paddingLeft="20dp"
@@ -111,10 +111,10 @@
             android:layout_height="wrap_content"
             android:hint="@string/alamat"
             android:minLines="5"
-            android:textColorHint="@color/text2"
+            android:textColorHint="@color/item"
             android:fontFamily="casual"
             android:textStyle="bold"
-            android:textColor="@color/text2"
+            android:textColor="@color/item"
             android:textSize="20dp"
             android:background="@drawable/menu_shape"
             android:paddingLeft="20dp"
@@ -126,10 +126,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/nii"
-            android:textColorHint="@color/text2"
+            android:textColorHint="@color/item"
             android:fontFamily="casual"
             android:textStyle="bold"
-            android:textColor="@color/text2"
+            android:textColor="@color/item"
             android:textSize="20dp"
             android:background="@drawable/menu_shape"
             android:paddingLeft="20dp"
@@ -155,7 +155,7 @@
                 android:padding="10dp"
                 android:fontFamily="casual"
                 android:textStyle="bold"
-                android:textColor="@color/text1"
+                android:textColor="@color/putih"
                 android:textSize="20dp"/>
 
             <Button
@@ -169,10 +169,8 @@
                 android:padding="10dp"
                 android:fontFamily="casual"
                 android:textStyle="bold"
-                android:textColor="@color/text1"
+                android:textColor="@color/putih"
                 android:textSize="20dp"/>
         </LinearLayout>
-
     </LinearLayout>
-
 </ScrollView>
