--- a/app/src/main/res/drawable/menu_shape.xml
+++ b/app/src/main/res/drawable/menu_shape.xml
@@ -2,12 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#CDB5B5B5"/>
+    <solid android:color="#CDCDCD"/>
 
     <corners
-        android:bottomLeftRadius="20dp"
-        android:topRightRadius="20dp"
-        android:topLeftRadius="20dp"
-        android:bottomRightRadius="20dp"/>
+        android:bottomLeftRadius="5dp"
+        android:topRightRadius="5dp"
+        android:topLeftRadius="5dp"
+        android:bottomRightRadius="5dp"/>
 
 </shape>
