--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#99343434</color>
-    <color name="colorPrimaryDark">#343434</color>
+    <color name="abuabuprimary">#343434</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="back1">#CD343434</color>
-    <color name="text1">#FFFFFF</color>
-    <color name="text2">#000000</color>
-    <color name="background1">#F3F3F3</color>
-    <color name="tab">#80343434</color>
-    <color name="backbg">#00FFFFFF</color>
-    <color name="trbg">#00FFFFFF</color>
+    <color name="putih">#FFFFFF</color>
+    <color name="item">#000000</color>
+    <color name="background1">#CD555555</color>
+    <color name="trans">#00FAFAFA</color>
+    <color name="lightgray">#C8C8C8</color>
+    <color name="graylight">#fafafa</color>
+
+    <color name="proback">#EDEDED</color>
+
+    <color name="startblue">#09c6df</color>
+    <color name="endblue">#0bcce6</color>
+    <color name="backgroundcolor">#fcfcfc</color>
+    <color name="deeppurple">#7c4dff</color>
+    <color name="yello">#ffb300</color>
+    <color name="green">#00bfa5</color>
+    <color name="darkblue">#23283a</color>
+    <color name="testcolorblue">#152b38</color>
+    <color name="pink">#fe104d</color>
+    <color name="black_overlay">#66000000</color>
 </resources>
