--- a/app/src/main/res/drawable/add.xml
+++ b/app/src/main/res/drawable/add.xml
@@ -1,5 +1,5 @@
-<vector android:height="50dp" android:tint="#FFFFFF"
+<vector android:height="95dp" android:tint="@color/raven"
     android:viewportHeight="24.0" android:viewportWidth="24.0"
-    android:width="50dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FFFFFF" android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
+    android:width="95dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="@color/raven" android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
 </vector>
