--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/background1"
+    android:background="@color/darkestIndigo"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingTop="10dp"
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
-        android:textColor="@color/putih"
+        android:textColor="@color/lightestDaisy"
         android:textSize="25dp"
         android:textStyle="bold"
         android:fontFamily="casual"/>
@@ -36,7 +36,7 @@
         android:layout_marginTop="30dp"
         android:fontFamily="casual"
         android:text="Sign In"
-        android:textColor="@color/putih"
+        android:textColor="@color/lilia"
         android:textSize="20dp"
         android:textStyle="bold" />
 
@@ -46,14 +46,14 @@
         android:layout_height="wrap_content"
         android:fontFamily="casual"
         android:text="Admin Mode"
-        android:textColor="@color/putih"
+        android:textColor="@color/lilia"
         android:textSize="15dp"/>
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/putih"
-        android:textColorHint="@color/putih">
+        android:textColor="@color/lilia"
+        android:textColorHint="@color/lilia">
         <EditText
             android:id="@+id/login_email"
             android:layout_width="match_parent"
@@ -64,8 +64,8 @@
             android:inputType="textEmailAddress"
             android:maxLines="1"
             android:singleLine="true"
-            android:textColor="@color/putih"
-            android:textColorHint="@color/putih"
+            android:textColor="@color/lilia"
+            android:textColorHint="@color/lilia"
             android:textStyle="bold"
             android:textSize="18dp"/>
     </com.google.android.material.textfield.TextInputLayout>
@@ -73,8 +73,8 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/putih"
-        android:textColorHint="@color/putih"
+        android:textColor="@color/lilia"
+        android:textColorHint="@color/lilia"
         app:passwordToggleEnabled="true">
         <EditText
             android:id="@+id/login_pw"
@@ -100,7 +100,7 @@
         android:background="@drawable/button_shape"
         android:fontFamily="casual"
         android:text="Sign In"
-        android:textColor="@color/putih"
+        android:textColor="@color/raven"
         android:textStyle="bold"
         android:textSize="15dp"/>
 
@@ -109,21 +109,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Belum punya akun? Registerasi disini!"
-        android:textColor="@color/putih"
-        android:textColorHint="@color/putih"
+        android:textColor="@color/lilia"
         android:textStyle="bold"
         android:fontFamily="casual"
         android:layout_marginTop="25px"
         android:gravity="center_horizontal"
         android:textSize="15dp"/>
 
-    <!--<TextView
+    <TextView
         android:id="@+id/tv_loginmethod"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Sign In dengan:"
-        android:textColor="@color/putih"
-        android:textColorHint="@color/putih"
+        android:textColor="@color/lilia"
         android:textStyle="bold"
         android:fontFamily="casual"
         android:layout_marginTop="50dp"
@@ -135,16 +133,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="@string/google_sign_in"
-        android:background="@drawable/button_shape"
-        android:textColor="@color/putih"
-        android:textStyle="bold"
-        android:fontFamily="casual"
         android:layout_marginTop="5dp"
+        android:background="@drawable/button_shape"
         android:drawableLeft="@drawable/google"
+        android:fontFamily="casual"
         android:paddingLeft="70dp"
         android:paddingRight="70dp"
-        android:textSize="15dp"/>-->
+        android:text="@string/google_sign_in"
+        android:textColor="@color/raven"
+        android:textSize="15dp"
+        android:textStyle="bold" />
 
     <ProgressBar
         android:id="@+id/progressbarLogin"
