--- a/app/src/main/res/layout/activity_mainpage.xml
+++ b/app/src/main/res/layout/activity_mainpage.xml
@@ -1,35 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:background="@drawable/bg">
+    android:background="@color/darkestIndigo"
+    tools:context=".ActivityMainPage">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="220dp"
-        android:fitsSystemWindows="true">
+        android:layout_height="120dp"
+        android:fitsSystemWindows="true"
+        android:background="#CDEFD469">
 
+<!--        app:contentScrim="?attr/colorPrimary"-->
+<!--        android:padding="8dp"-->
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
-            app:contentScrim="?attr/colorPrimary"
+            app:contentScrim="@color/lightestDaisy"
             app:expandedTitleMarginEnd="64dp"
             app:expandedTitleMarginStart="48dp"
-            android:padding="8dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fitsSystemWindows="true"
-                android:src="@drawable/title"
-                app:layout_collapseMode="parallax"/>
+<!--            <ImageView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:fitsSystemWindows="true"-->
+<!--                android:src="@drawable/title"-->
+<!--                app:layout_collapseMode="parallax"/>-->
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
@@ -46,6 +49,7 @@
         android:id="@+id/nestedscrollview">
 
             <LinearLayout
+                android:layout_marginTop="100dp"
                 android:clipToPadding="false"
                 android:gravity="center"
                 android:orientation="horizontal"
@@ -57,7 +61,8 @@
                     android:id="@+id/listaktifitas"
                     android:layout_width="180dp"
                     android:layout_height="300dp"
-                    android:layout_margin="10dp">
+                    android:layout_margin="10dp"
+                    app:cardBackgroundColor="@color/lightestDaisy">
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -74,10 +79,10 @@
                             android:layout_height="wrap_content"
                             android:textStyle="bold"
                             android:layout_marginTop="10dp"
-                            android:text="Daftar Kegiatan"
+                            android:text="Daftar Aktivitas"
                             android:fontFamily="casual"
                             android:textSize="20dp"
-                            android:textColor="@color/item"/>
+                            android:textColor="@color/raven"/>
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
@@ -89,9 +94,10 @@
                             android:gravity="center"
                             android:text="Buat daftar aktifitas kegiatan yang dilakukan selama prakerin!"
                             android:padding="5dp"
-                            android:textColor="@color/item"
+                            android:textColor="@color/raven"
                             android:fontFamily="casual"
-                            android:textSize="15dp"/>
+                            android:textSize="15dp"
+                            android:textStyle="bold"/>
 
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
@@ -101,7 +107,8 @@
                     android:layout_width="180dp"
                     android:layout_height="300dp"
                     android:layout_margin="10dp"
-                    android:id="@+id/profile">
+                    android:id="@+id/profile"
+                    app:cardBackgroundColor="@color/lightestDaisy">
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -121,7 +128,7 @@
                             android:text="Profil"
                             android:fontFamily="casual"
                             android:textSize="20dp"
-                            android:textColor="@color/item"/>
+                            android:textColor="@color/raven"/>
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
@@ -133,9 +140,10 @@
                             android:gravity="center"
                             android:text="Ubah dan simpan informasi data diri."
                             android:padding="5dp"
-                            android:textColor="@color/item"
+                            android:textColor="@color/raven"
                             android:fontFamily="casual"
-                            android:textSize="15dp"/>
+                            android:textSize="15dp"
+                            android:textStyle="bold"/>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
