--- a/app/src/main/res/layout/activity_regist.xml
+++ b/app/src/main/res/layout/activity_regist.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background1"
+    android:background="@color/darkestIndigo"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingLeft="30dp"
@@ -16,7 +16,7 @@
     <ImageView
         android:id="@+id/iv_title"
         android:layout_width="wrap_content"
-        android:layout_height="75dp"
+        android:layout_height="85dp"
         android:src="@drawable/title" />
 
     <TextView
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="casual"
         android:text="@string/app_name"
-        android:textColor="@color/putih"
+        android:textColor="@color/lightestDaisy"
         android:textSize="25dp"
         android:textStyle="bold" />
 
@@ -36,7 +36,7 @@
         android:layout_marginTop="15dp"
         android:fontFamily="casual"
         android:text="Sign Up"
-        android:textColor="@color/putih"
+        android:textColor="@color/lilia"
         android:textSize="20dp"
         android:textStyle="bold" />
 
@@ -46,34 +46,36 @@
         android:layout_height="wrap_content"
         android:fontFamily="casual"
         android:text="Admin Mode"
-        android:textColor="@color/putih"
+        android:textColor="@color/lilia"
         android:textSize="15dp" />
 
+<!--    <com.google.android.material.textfield.TextInputLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:textColor="@color/lilia"-->
+<!--        android:textColorHint="@color/lilia">-->
+
+<!--        <EditText-->
+<!--            android:id="@+id/regist_nama"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:fontFamily="casual"-->
+<!--            android:hint="Nama Lengkap"-->
+<!--            android:imeOptions="actionNext"-->
+<!--            android:inputType="textEmailAddress"-->
+<!--            android:maxLines="1"-->
+<!--            android:singleLine="true"-->
+<!--            android:textSize="18dp"-->
+<!--            android:textStyle="bold"-->
+<!--            android:textColorHint="@color/putih"-->
+<!--            android:textColor="@color/putih"/>-->
+<!--    </com.google.android.material.textfield.TextInputLayout>-->
+
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/putih"
-        android:textColorHint="@color/putih">
-
-        <EditText
-            android:id="@+id/regist_nama"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="casual"
-            android:hint="Nama Lengkap"
-            android:imeOptions="actionNext"
-            android:inputType="textEmailAddress"
-            android:maxLines="1"
-            android:singleLine="true"
-            android:textSize="18dp"
-            android:textStyle="bold" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/putih"
-        android:textColorHint="@color/putih">
+        android:textColor="@color/lilia"
+        android:textColorHint="@color/lilia">
 
         <EditText
             android:id="@+id/regist_email"
@@ -86,14 +88,16 @@
             android:maxLines="1"
             android:singleLine="true"
             android:textSize="18dp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textColorHint="@color/lilia"
+            android:textColor="@color/lilia"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/putih"
-        android:textColorHint="@color/putih"
+        android:textColor="@color/lilia"
+        android:textColorHint="@color/lilia"
         app:passwordToggleEnabled="true">
 
         <EditText
@@ -107,7 +111,9 @@
             android:maxLines="1"
             android:singleLine="true"
             android:textSize="18dp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textColorHint="@color/lilia"
+            android:textColor="@color/lilia"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
@@ -118,7 +124,7 @@
         android:background="@drawable/button_shape"
         android:fontFamily="casual"
         android:text="Sign Up"
-        android:textColor="@color/putih"
+        android:textColor="@color/raven"
         android:textSize="15dp"
         android:textStyle="bold" />
 
@@ -131,39 +137,37 @@
         android:fontFamily="casual"
         android:gravity="center_horizontal"
         android:text="Sudah punya akun? Login disini!"
-        android:textColor="@color/putih"
-        android:textColorHint="@color/putih"
+        android:textColor="@color/lilia"
         android:textSize="15dp"
         android:textStyle="bold" />
 
-    <!--<TextView
-        android:id="@+id/tv_signupmethod"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:fontFamily="casual"
-        android:gravity="center_horizontal"
-        android:text="Sign Up dengan:"
-        android:textColor="@color/putih"
-        android:textColorHint="@color/putih"
-        android:textSize="20dp"
-        android:textStyle="bold" />
+<!--    <TextView-->
+<!--        android:id="@+id/tv_signupmethod"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="50dp"-->
+<!--        android:fontFamily="casual"-->
+<!--        android:gravity="center_horizontal"-->
+<!--        android:text="Sign Up dengan:"-->
+<!--        android:textColor="@color/lilia"-->
+<!--        android:textSize="20dp"-->
+<!--        android:textStyle="bold" />-->
 
-    <Button
-        android:id="@+id/btngoogleregist"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/button_shape"
-        android:drawableLeft="@drawable/google"
-        android:fontFamily="casual"
-        android:paddingLeft="70dp"
-        android:paddingRight="70dp"
-        android:text="@string/google_sign_in"
-        android:textColor="@color/putih"
-        android:textSize="15dp"
-        android:textStyle="bold" />-->
+<!--    <Button-->
+<!--        android:id="@+id/btngoogleregist"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_centerInParent="true"-->
+<!--        android:layout_marginTop="5dp"-->
+<!--        android:background="@drawable/button_shape"-->
+<!--        android:drawableLeft="@drawable/google"-->
+<!--        android:fontFamily="casual"-->
+<!--        android:paddingLeft="70dp"-->
+<!--        android:paddingRight="70dp"-->
+<!--        android:text="@string/google_sign_in"-->
+<!--        android:textColor="@color/putih"-->
+<!--        android:textSize="15dp"-->
+<!--        android:textStyle="bold" />-->
 
     <ProgressBar
         android:id="@+id/progressbarRegist"
